# cpp-emr-system

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: patient.hpp
src/: main.cpp  patient.cpp
